      tree conary looks through for new files.
     * Added exceptions and exceptDeps options to RPMRequires

  o Internal Changes
    * Optimized StreamCollection diff and __eq__ operations to use frozen
      data if available
    * Merged internals of localcs/verify implementation into new classes
    * Flavor objects can now be used with the stdlib "pickle" module.

  o Bug Fixes:
    * SSL XMLRPC connections will now retry before raising an exception 
      (CNY-3369)
    * Java requirements for classes depending on other classes for which
      provides have been dropped no longer propagate as trove or file
      requirements. (CNY-3362)
    * Auto-sourced files will now be fetched through an proxy if the
      appropriate *_proxy environment variable is set of the a proxy is
      configured for conary. (RBL-5714)
    * Lookaside fixed for files that have identical names but different
      contents (CNY-3256)
    * Jobs would be split inappropriately when capsules were pulled in
      through dependency resolution (CNY-3367)

Changes in 2.1.9:
  o Bug Fixes:
    * The NO_PROXY environment variable no longer applies to conary
      proxies. (CNY-3360)
      
Changes in 2.1.8:
  o Bug Fixes:
    * Added abort-on-error to conary rollback command which causes rollback
      be aborted if any pre scripts fail. (CNY-3327)
    * Fixed bug introduced in Conary 2.1.0 which caused conary to ignore
      ownership differences for executable files. (CNY-3354)
    * When SetModes() is called twice, honor the last invocation with
      regard to setuid and setgid, including if neither setuid nor
      setgid is set.  Also, make it possible to override setuid and
      setgid bits in a derived package. (CNY-3344)
    * Fixed a bug in Conary 2.1.0 which caused updates to fail
      because a temporary table persisted across jobs. (CNY-3339)
    * Changed default behavior of imageGroup flag in group recipes so that
      checkOnlyByDefaultDeps is now set to True (CNY-3356)
