@@ -19,13 +19,15 @@ from conary.lib import digestlib, util
 
 class CapsuleOperation(object):
 
-    def __init__(self, root, db, changeSet, callback, fsJob):
+    def __init__(self, root, db, changeSet, callback, fsJob,
+                 skipCapsuleOps = False):
         self.root = root
         self.db = db
         self.changeSet = changeSet
         self.fsJob = fsJob
         self.callback = callback
         self.errors = []
+        self.skipCapsuleOps = skipCapsuleOps
 
     def apply(self, justDatabase = False):
         raise NotImplementedException
@@ -161,6 +163,9 @@ class MetaCapsuleOperations(CapsuleOperation):
             # as a conary
             return False
 
+        if self.skipCapsuleOps:
+            return True
+
         capsule = self.getCapsule(capsuleInfo.type())
         capsule.install(flags, troveCs)
 
@@ -170,6 +175,9 @@ class MetaCapsuleOperations(CapsuleOperation):
         cType = trove.troveInfo.capsule.type()
         if not cType:
             return False
+
+        if self.skipCapsuleOps:
+            return True
 
         capsule = self.getCapsule(cType)
         capsule.remove(trove)
