@@ -56,7 +56,8 @@ class UpdateFlags(util.Flags):
     __slots__ = [ 'merge', 'ignoreUGids', 'missingFilesOkay',
                   'ignoreInitialContents', 'replaceManagedFiles',
                   'replaceUnmanagedFiles', 'replaceModifiedFiles',
-                  'replaceModifiedConfigFiles', 'ignoreMissingFiles' ]
+                  'replaceModifiedConfigFiles', 'ignoreMissingFiles',
+                  'skipCapsuleOps' ]
 
 class LastRestored(object):
 
@@ -1718,8 +1719,8 @@ class FilesystemJob:
 	self.tagRemoves = {}
         self.linkGroups = {}
         self.capsules = capsules.MetaCapsuleOperations(root, db, changeSet,
-                                                       callback,
-                                                       weakref.proxy(self))
+                                   callback, weakref.proxy(self),
+                                   skipCapsuleOps = flags.skipCapsuleOps)
         self.postScripts = []
         self.rollbackPhase = rollbackPhase
 	self.db = db
