@@ -15,6 +15,10 @@ Changes in 2.1.10:
       data if available
     * Merged internals of localcs/verify implementation into new classes
     * Flavor objects can now be used with the stdlib "pickle" module.
+    * Added ability to commit changesets without executing capsule
+      implementations. This allows us to build a conarydb which reflects
+      the current state of a system without reinstalling packages through
+      the capsule handler.
 
   o Bug Fixes:
     * SSL XMLRPC connections will now retry before raising an exception 
